@@ -1,3 +1,7 @@
+2006-10-30  Karsten Dambekalns  <karsten@typo3.org>
+
+        * Fixed bug #3637 in EM (translation handling)
+
 2006-10-17  Dmitry Dulepov  <dmitry@typo3.org>
 
 	* Fixed bug 3199: SUing to myself?
